--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Reddit-Web-Fix",
-  "version": "1.0",
-  "description": "Fixes post-vote tracking on Reddit. Upvotes and downvotes stay highlighted and vote count will be updated and persisted better.",
-  "permissions": ["scripting", "storage", "tabs"],
+  "name": "Reddit Web Fix",
+  "version": "1.0.0",
+  "description": "For posts on Reddit main/subreddit - upvote and downvote highlight behavior is improved and the post vote count is synced when visiting the post comments page.",
+  "permissions": ["storage", "tabs"],
   "host_permissions": ["https://www.reddit.com/*"],
   "content_scripts": [
     {
@@ -12,6 +12,7 @@
       "run_at": "document_idle"
     }
   ],
+
   "web_accessible_resources": [
     {
       "resources": ["browser-polyfill.min.js", "constants.js"],
@@ -21,5 +22,21 @@
   "options_ui": {
     "page": "options.html",
     "open_in_tab": false
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self';"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "author": "Richard Iannucelli",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@reddit-web-fix.Richard-Iannucelli",
+      "strict_min_version": "42.0"
+    }
   }
 }
