--- a/manifest-both.json
+++ b/manifest-both.json
@@ -40,6 +40,7 @@
     }
   },
   "background": {
-    "service_worker": "serviceWorker.js"
+    "service_worker": "serviceWorker.js",
+    "scripts": ["serviceWorker.js"]
   }
 }
