--- a/manifest-both.json
+++ b/manifest-both.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Reddit Web Fix",
-  "version": "1.0.0",
-  "description": "Fixes posts upvote and downvote highlight behavior and syncs the post vote count when visiting the post comments page.",
+  "version": "0.0.0.1",
+  "description": "Fixes posts upvote and downvote highlight behavior and syncs posts vote count sensibly.",
   "permissions": ["storage"],
   "content_scripts": [
     {
