--- a/manifest-both.json
+++ b/manifest-both.json
@@ -20,7 +20,8 @@
         "src/utils/storage.js",
         "icons/goldenSyncIcon.png",
         "src/content/animation.js",
-        "src/content/VoteSync.js"
+        "src/content/VoteSync.js",
+        "src/content/observers.js"
       ],
       "matches": ["https://www.reddit.com/*"]
     }
