--- a/manifest-both.json
+++ b/manifest-both.json
@@ -22,7 +22,8 @@
         "src/content/animation.js",
         "src/content/VoteSync.js",
         "src/content/observers.js",
-        "src/content/Appearance.js"
+        "src/content/Appearance.js",
+        "src/content/DragScroll.js"
       ],
       "matches": ["https://www.reddit.com/*"]
     }
