Refactor DragScroll functionality: Update scroll intervals and distance coefficients for improved performance, add double-click event listener for drag start, and streamline drag state management. Enhance popup HTML to clarify drag scroll toggle functionality.

--- a/manifest-both.json
+++ b/manifest-both.json
@@ -18,12 +18,12 @@
         "src/polyfill/browser-polyfill.min.js",
         "src/content/constants.js",
         "src/utils/storage.js",
-        "icons/goldenSyncIcon.png",
         "src/content/animation.js",
         "src/content/VoteSync.js",
         "src/content/observers.js",
         "src/content/Appearance.js",
-        "src/content/DragScroll.js"
+        "src/content/DragScroll.js",
+        "icons/goldenSyncIcon.png"
       ],
       "matches": ["https://www.reddit.com/*"]
     }
